log
Tue 23 Apr 2024 01:24:58 AM UTC: 
 tests:  0|6
total_score: 0/70
7df9e87
Tue 23 Apr 2024 01:27:31 AM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
85d5d6d
Tue 23 Apr 2024 01:34:01 AM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:74:14: error: ‘Pair’ has no member named ‘next’
   74 |     par = par->next;
      |              ^~
Compilation failed
d4a8a23
Tue 23 Apr 2024 01:34:39 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
183a76a
Tue 23 Apr 2024 01:36:00 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   76 |     map->current = par;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
4b04feb
Tue 23 Apr 2024 01:36:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:18: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   76 |     map->current = map->buckets[posicion+1] ;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
5d3d569
Tue 23 Apr 2024 01:37:05 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
d73f0c4
Tue 23 Apr 2024 01:37:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
65d7fcf
Tue 23 Apr 2024 01:37:39 AM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 10/70
ded6e5a
Tue 23 Apr 2024 01:38:48 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
aed407d
Tue 23 Apr 2024 01:39:10 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
458064d
Tue 23 Apr 2024 01:39:19 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
4b9e9db
Tue 23 Apr 2024 01:40:34 AM UTC: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d81560d
Tue 23 Apr 2024 01:40:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
178d4ea
Tue 23 Apr 2024 01:41:09 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:14: error: ‘Pair’ has no member named ‘next’
   75 |     par = par->next;
      |              ^~
Compilation failed
426d77d
Tue 23 Apr 2024 01:41:43 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
b4f2726
Tue 23 Apr 2024 01:43:14 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:17: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   76 |     map->buckets->current = posicion+1;
      |                 ^~
      |                 ->
Compilation failed
c998238
Tue 23 Apr 2024 01:47:34 AM UTC: 
 hashmap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0b8ab7a
Tue 23 Apr 2024 01:47:54 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 10/70
bed21a1
Tue 23 Apr 2024 01:49:27 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:32: error: expected ‘;’ before ‘}’ token
   82 |     map->current = posicion + 1
      |                                ^
      |                                ;
   83 | 
   84 |   }
      |   ~                             
Compilation failed
1eff0e2
Tue 23 Apr 2024 01:53:03 AM UTC: 
 hashmap.c | 26 +++++++++++++++++++-------
 1 file changed, 19 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6f1ed16
Tue 23 Apr 2024 01:53:15 AM UTC: 
 hashmap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  5|4
total_score: 30/70
aa40da6
Tue 23 Apr 2024 01:53:56 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:50:40: error: expected statement before ‘)’ token
   50 |   while(map->buckets[posicion] != NULL))
      |                                        ^
Compilation failed
1008770
Tue 23 Apr 2024 01:54:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
b6c09ba
Tue 23 Apr 2024 01:55:41 AM UTC: 
 hashmap.c | 17 +----------------
 1 file changed, 1 insertion(+), 16 deletions(-)
 tests:  1|5
total_score: 10/70
6a115fd
Tue 23 Apr 2024 01:55:59 AM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
59d1fd0
Tue 23 Apr 2024 01:56:22 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:28: error: expected ‘;’ before ‘}’ token
   56 |     posicion = (posicion+1)
      |                            ^
      |                            ;
   57 |   }
      |   ~                         
Compilation failed
b59f89d
Tue 23 Apr 2024 01:56:28 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
de3efae
Tue 23 Apr 2024 01:59:31 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
8d28abd
Tue 23 Apr 2024 02:03:40 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
d99dd10
Tue 23 Apr 2024 02:04:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
4db0ea7
Tue 23 Apr 2024 02:07:05 AM UTC: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:117:25: error: ‘Pair’ has no member named ‘valor’
  117 |   return map->buckets[0]->valor;
      |                         ^~
hashmap.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
  118 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8c7f645
